--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" />
@@ -8,8 +8,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Paya Maroufi's Portfolio"
+      content="Paya Maroufi's online portfolio website showcasing projects he's made, events he's attended, and achievements he's proud of."
     />
+    <meta property="og:title" content="Paya's Portfolio"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://payamaroufi.xyz/"/>
+    <meta property="og:image" content="https://payamaroufi.xyz/logo192.png"/>
+    <meta property="og:image:alt" content="'>PM_'"/>
+    <meta property="og:locale" content="en_CA"/>
+    <meta property="og:description" content="Paya Maroufi's online portfolio website showcasing projects he's made, events he's attended, and achievements he's proud of."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
